--- a/atm2/template.html
+++ b/atm2/template.html
@@ -10,12 +10,13 @@
 	</head>
 	<body>
 		
+		<div id="checking">
 		<div>
-			<h1>Bank of G.A.</h1>
+			<h1>Bank of G.A. Checking</h1>
 		</div>
 
 		<div id="balance">
-			1000
+			$1000
 		</div>
 
 		<div id="transaction">
@@ -25,6 +26,30 @@
 			<input type="button" value="Withdraw" id="b2" />
 
 		</div>
+		</div><!-- #checking -->
+
+
+		
+
+
+		<div id="savings">
+		<div>
+			<h1>Bank of G.A. Savings</h1>
+		</div>
+
+		<div id="balance2">
+			$1000
+		</div>
+
+		<div id="transaction2">
+
+			<input type="text" id="st1" />
+			<input type="button" value="Deposit" id="sb1" />
+			<input type="button" value="Withdraw" id="sb2" />
+
+		</div>
+		</div><!-- #savings -->
+		
 		
 
 	</body>
