--- a/checkers/template.html
+++ b/checkers/template.html
@@ -9,10 +9,17 @@
 		<script src="template.js"></script>
 	</head>
 	<body>
-
-		<input id="search" type="text" placeholder="cats" />
-		<input id="add" type="button" value="Add Photos from Flickr" />
-		<div id="photos"></div>
 		
+
+		<div id="header">Player <span class="playerturn"></span>'s Turn</div>
+
+		<br>
+
+		<div id="game"></div>		
+
+
+
+	
+  	
 	</body>
 </html>
