--- a/hw3/template.html
+++ b/hw3/template.html
@@ -11,18 +11,18 @@
 	<body>
 		<div id="container">
 
-			<header>
-				<h1>Memory</h1>
+			<header class="clearfix">
+				<h1>MEMORY</h1>
 				<h2>Game Time: <span class="time">0</span></h2>
 			</header>
 
 			<div id="inputs">
-				<input id="small" type="button" value="small">
-				<input id="medium" type="button" value="MediuM">
-				<input id="large" type="button" value="LARGE">
+				<input id="small" type="button" value="Small">
+				<input id="medium" type="button" value="Medium">
+				<input id="large" type="button" value="Large">
 			</div> <!-- #inputs -->
 			
-			<div id="board">
+			<div id="board" class="clearfix">
 			
 			</div> <!-- #board -->
 
